Fix arriving alignment

--- a/client/css/main.less
+++ b/client/css/main.less
@@ -160,7 +160,7 @@ input[type="radio"] {
 }
 
 @media (min-width: 768px) {
-  #asylum {
+  #arriving {
     h1 {
       text-align: right;
     }
